# BookWise

./: README.md  classifier.py  data_collector.py  pyproject.toml  recomendation.py  settings.py  train.py  utils.py  web.py
